--- a/SAM.HTML
+++ b/SAM.HTML
@@ -47,7 +47,7 @@
         <h1>SAM: Leading Unforgettable Event Production</h1>
     </header>
     <div class="imgSAM">
-        <img src="./sam.png">
+        <img src="./SAM1.png">
     </div>
     
     <footer>
