--- a/SAM.HTML
+++ b/SAM.HTML
@@ -96,6 +96,15 @@
             max-width: 15%;
             height: auto;
         }
+        .Event_experiences{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .Event_experiences IMG{
+            width: 20%;
+            height: 20%;
+        }
         .IMGSAMNEW {
     display: flex;
     justify-content: center; /* מרכז את האלמנטים בצורה אופקית */
@@ -141,6 +150,15 @@
             <p>Email: sameventproduction@gmail.com</p>
             <p>Phone: 123-456-7890</p>
             <p>Address: Ruppin Academic Center </p>
+        </section>
+        <section class="Event_experiences1">
+            <h2>Event experiences</h2>
+            <section class="Event_experiences">
+            <img src="./Tree.jpg">
+            <img src="./Tow.jpg">
+            <img src="./five.jpg">
+            <img src="./PURIM.png">
+            <img src="./wedding.jpg">
         </section>
         <section class="IMGSAMNEW">
             <img src="./SAM EVENT PRODUCTION.jpeg">
