--- a/SAM.HTML
+++ b/SAM.HTML
@@ -26,8 +26,12 @@
 
         .logo img {
             max-height: 100px;
+            transition: transform 0.3s ease-in-out;
+           
         }
-
+        .logo img:hover{
+            transform: scale(1.1);
+        }
         h1 {
             margin: 10px 0;
         }
@@ -54,8 +58,11 @@
             display: block;
             margin: 20px auto;
             border-radius: 8px;
+            transition: transform 0.3s ease-in-out;
         }
-
+       .about img:hover{
+        transform: scale(1.3);
+       }
         ul {
             list-style-type: none;
             padding: 0;
@@ -104,6 +111,10 @@
         .Event_experiences IMG{
             width: 20%;
             height: 20%;
+            transition: transform 0.3s ease-in-out;
+        }
+        .Event_experiences IMG:hover{
+            transform: scale(1.1); 
         }
         .IMGSAMNEW {
     display: flex;
@@ -114,8 +125,61 @@
 .IMGSAMNEW img {
     max-width: 100%; /* אורך מקסימלי */
     max-height: 100%; /* גובה מקסימלי */
+    transition: transform 0.3s ease-in-out;
 }
+.IMGSAMNEW img:hover {
+            transform: scale(1.1); 
+        }
+        .contact-form {
+            display: none;
+            position: fixed;
+            bottom: 100px;
+            right: 20px;
+            background-color: #f6ebeb;
+            padding: 20px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            z-index: 1001;
+        }
 
+        .contact-form input, .contact-form textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        .contact-form button {
+            background-color: #ff5722;
+            color: #fff;
+            padding: 10px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .contact-form button:hover {
+            background-color: #e64a19;
+        }
+
+        .floating-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #ff5722;
+            color: #fff;
+            padding: 15px;
+            border: none;
+            border-radius: 50%;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            cursor: pointer;
+            z-index: 1000;
+        }
+
+        .floating-button:hover {
+            background-color: #e64a19;
+        }
     </style>
 </head>
 <body>
@@ -167,5 +231,33 @@
     <footer>
         <p>&copy; 2024 SAM Event Production. All rights reserved.</p>
     </footer>
+
+    <button class="floating-button" onclick="toggleForm()">Contact Us</button>
+
+    <div class="contact-form" id="contactForm">
+        <h2>Contact Us</h2>
+        <form>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="phone">Phone:</label>
+            <input type="tel" id="phone" name="phone" required>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" required></textarea>
+            <button type="submit">Send</button>
+        </form>
+    </div>
+
+    <script>
+        function toggleForm() {
+            var form = document.getElementById('contactForm');
+            if (form.style.display === 'none' || form.style.display === '') {
+                form.style.display = 'block';
+            } else {
+                form.style.display = 'none';
+            }
+        }
+    </script>
 </body>
 </html>
